@@ -1,3 +1,11 @@
+2007-01-25  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* gnome-screenshot.c: Unref the GnomeProgram instance if you
+	cancel the screenshot in interactive mode; hide the dialog
+	inside the response callback, while the main loop is still
+	running, so that the screenshot functions can grab the desired
+	window instead of the (non-existing) interactive dialog.
+
 2007-01-24  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* gnome-screenshot.c: Do not leak GnomeProgram instance
